refactor: replace Math.max/min with Math.clamp for volume settings